--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "outDir": "./lib",
-        "allowJs": false,
+        "allowJs": true,
         "target": "es5",
         "lib": ["es2017", "es7", "es6", "dom"],
         "declaration": true,
