--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
     "bcrpc": "^0.2.3"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
+    "eslint": "^8.2.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jsdoc": "^37.0.3",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
     "typescript": "^3.7.4"
   },
   "files": [
